--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>降ってくる単位を獲得せよ</h1>
         <div class="rules">
             <h2>【ルール】</h2>
-            <p>マウスかキーボードの矢印キー（← →）でバーを操作し、上から落ちてくる円をゲットしよう。</p>
+            <p>バーを操作し、上から落ちてくる円をゲットしよう。</p>
             <ul>
                 <li>制限時間は<strong>15秒</strong>です。</li>
                 <li>獲得単位が<strong>30</strong>を超えると「進級」、30以下だと「留年」になります。</li>
